--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0c1124;
+    --background: #111;
     --foreground: #111;
   }
 }
