--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,57 @@
 
 
 
+/* From Uiverse.io by ashish-yadv */ 
+.loader {
+  width: 60px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.ball {
+  list-style: none;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+.ball:nth-child(1) {
+  animation: bounce-1 2.1s ease-in-out infinite;
+}
+
+@keyframes bounce-1 {
+  50% {
+    transform: translateY(-90px);
+    scale: 0.3;
+  }
+}
+
+.ball:nth-child(2) {
+  animation: bounce-3 2.1s ease-in-out 0.3s infinite;
+}
+
+@keyframes bounce-2 {
+  50% {
+    transform: translateY(-90px);
+    scale: 0.3;
+  }
+}
+
+.ball:nth-child(3) {
+  animation: bounce-3 2.1s ease-in-out 0.6s infinite;
+}
+
+@keyframes bounce-3 {
+  50% {
+    transform: translateY(-90px);
+    scale: 0.3;
+  }
+}
+
 :root {
-  --background: #F7F6F4;
-  --foreground: #F7F6F4;
+  --background: #0a0a0a;
+  --foreground: #0a0a0a;
 }
 
 @theme inline {
@@ -16,8 +64,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #F7F6F4;
-    --foreground: #F7F6F4;
+    --background: #0a0a0a;
+    --foreground: #0a0a0a;
   }
 }
 
@@ -100,9 +148,9 @@ body {
   color: transparent;
   background: linear-gradient(
     120deg,
-    black 40%,
-    white 50%,
-    black 60%
+    rgb(134, 134, 134) 40%,
+    rgb(255, 255, 255) 50%,
+    rgb(134, 134, 134) 60%
   );
   background-size: 200% 100%;
   -webkit-background-clip: text;
@@ -127,5 +175,9 @@ body {
   -webkit-background-clip: initial;
   background-clip: initial;
 }
+
+
+
+
 
 
