--- a/app/globals.css
+++ b/app/globals.css
@@ -2,51 +2,63 @@
 
 
 
-/* From Uiverse.io by ashish-yadv */ 
 .loader {
-  width: 60px;
-  display: flex;
-  justify-content: space-evenly;
-}
+  width: 16px;
+  height: 16px;
+  position: relative;
 
-.ball {
-  list-style: none;
-  width: 12px;
-  height: 12px;
   border-radius: 50%;
-  background-color: #fff;
+  color: #fff;
+  background: currentColor;
+  box-shadow: 32px 0 , -32px 0 ,  64px 0;
 }
 
-.ball:nth-child(1) {
-  animation: bounce-1 2.1s ease-in-out infinite;
+.loader::after {
+  content: '';
+  position: absolute;
+
+  top: 0;
+  width: 16px;
+  height: 16px;
+  border-radius: 10px;
+  background: #ffffff;
+  animation: move_351 3s linear infinite alternate;
 }
 
-@keyframes bounce-1 {
-  50% {
-    transform: translateY(-90px);
-    scale: 0.3;
+@keyframes move_351 {
+  0% , 5% {
+    left: -32px;
+    width: 16px;
   }
-}
 
-.ball:nth-child(2) {
-  animation: bounce-3 2.1s ease-in-out 0.3s infinite;
-}
-
-@keyframes bounce-2 {
-  50% {
-    transform: translateY(-90px);
-    scale: 0.3;
+  15% , 20% {
+    left: -32px;
+    width: 48px;
   }
-}
 
-.ball:nth-child(3) {
-  animation: bounce-3 2.1s ease-in-out 0.6s infinite;
-}
+  30% , 35% {
+    left: 0px;
+    width: 16px;
+  }
 
-@keyframes bounce-3 {
-  50% {
-    transform: translateY(-90px);
-    scale: 0.3;
+  45% , 50% {
+    left: 0px;
+    width: 48px;
+  }
+
+  60% , 65% {
+    left: 32px;
+    width: 16px;
+  }
+
+  75% , 80% {
+    left: 32px;
+    width: 48px;
+  }
+
+  95%, 100% {
+    left: 64px;
+    width: 16px;
   }
 }
 
