--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap');
 
 
 .loader {
@@ -215,7 +215,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  border: 1px solid #000000;
+  border: 1px solid #555;
   border-radius: calc(var(--outer-r) - var(--p-distance));
   background-color: transparent ;
   overflow: hidden;
@@ -394,4 +394,312 @@ body {
 
 .inner-dot {
   position: absolute;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.star-border-container {
+  display: inline-block;
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.border-gradient-bottom {
+  position: absolute;
+  width: 300%;
+  height: 50%;
+  opacity: 0.7;
+  bottom: -12px;
+  right: -250%;
+  border-radius: 50%;
+  animation: star-movement-bottom linear infinite alternate;
+  z-index: 0;
+}
+
+.border-gradient-top {
+  position: absolute;
+  opacity: 0.7;
+  width: 300%;
+  height: 50%;
+  top: -12px;
+  left: -250%;
+  border-radius: 50%;
+  animation: star-movement-top linear infinite alternate;
+  z-index: 0;
+}
+
+.inner-content {
+  position: relative;
+  border: 1px solid #222;
+  background: #000;
+  color: white;
+  font-size: 16px;
+  text-align: center;
+  padding: 16px 26px;
+  border-radius: 20px;
+  z-index: 1;
+}
+
+@keyframes star-movement-bottom {
+  0% {
+    transform: translate(0%, 0%);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-100%, 0%);
+    opacity: 0;
+  }
+}
+
+@keyframes star-movement-top {
+  0% {
+    transform: translate(0%, 0%);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(100%, 0%);
+    opacity: 0;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.bold {
+  font-family: "Rubik Dirt", system-ui;
+  font-weight: 700;
+  font-style: normal;
+}
+
+
+
+
+
+
+
+/* From Uiverse.io by Ashon-G */ 
+.relative {
+  position: relative;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+:backdrop {
+  --tw-ring-offset-shadow: 0 0 #0000;
+  --tw-ring-shadow: 0 0 #0000;
+  --tw-shadow: 0 0 #0000;
+}
+
+.pointer-events-none {
+  pointer-events: none;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.inset-0 {
+  inset: 0;
+}
+
+button {
+  font-family: inherit;
+  font-feature-settings: inherit;
+  font-variation-settings: inherit;
+  font-size: 100%;
+  font-weight: inherit;
+  line-height: inherit;
+  color: inherit;
+  margin: 0;
+  padding: 0;
+  width: 250px !important;
+  border: none;
+}
+
+button {
+  text-transform: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+.inline-flex {
+  display: inline-flex;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 118 251 / var(--tw-bg-opacity));
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-2\.5 {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.15s;
+}
+
+#style-AQliM.style-AQliM {
+  top: 1%;
+  left: 99%;
+}
+#style-WCb99.style-WCb99 {
+  top: 7%;
+  left: 1%;
+}
+#style-dBNZV.style-dBNZV {
+  top: 93%;
+  left: 23%;
+}
+#style-tiisO.style-tiisO {
+  top: 43%;
+  left: 15%;
+}
+#style-re9B7.style-re9B7 {
+  top: 93%;
+  left: 9%;
+}
+#style-BKG4G.style-BKG4G {
+  top: 21%;
+  left: 88%;
+}
+#style-NaoVe.style-NaoVe {
+  top: 99%;
+  left: 95%;
+}
+#style-pwIlv.style-pwIlv {
+  top: 64%;
+  left: 99%;
+}
+#style-QmcAd.style-QmcAd {
+  top: 14%;
+  left: 45%;
+}
+#style-VG2eL.style-VG2eL {
+  top: 2%;
+  left: 48%;
+}
+
+/* Keyframes for sparkle animation */
+@keyframes sparkle {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+/* Add animation to sparkle elements */
+.animate-magic-sparkle {
+  animation: sparkle 2s infinite;
+}
+
+.style-AQliM {
+  animation-delay: 0.5s;
+}
+.style-WCb99 {
+  animation-delay: 0.33s;
+}
+.style-dBNZV {
+  animation-delay: 0.6s;
+}
+.style-tiisO {
+  animation-delay: 0.9s;
+}
+.style-re9B7 {
+  animation-delay: 1.2s;
+}
+.style-BKG4G {
+  animation-delay: 1.5s;
+}
+.style-NaoVe {
+  animation-delay: 1.8s;
+}
+.style-pwIlv {
+  animation-delay: 1.9s;
+}
+.style-QmcAd {
+  animation-delay: 1.4s;
+}
+.style-VG2eL {
+  animation-delay: 1.7s;
 }
